Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1028,10 +1028,10 @@
     "not-allowed-modify": "No tiene permiso para modificar",
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Obsah není uložen",
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "Není platný obrázek",
     "not-valid-percentage-retention": "Porcentaje no válido. Debe ser mayor de 0.00",
     "note": "Nota",
     "notes": "Notas",
@@ -1039,16 +1039,16 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Listopad",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Počet příloh",
     "number-length": "Longitud del número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Núm. proveedor",
     "observations": "Observaciones",
-    "october": "Octubre",
+    "october": "Říjen",
     "offsetting-account": "Cuenta para contrapartida",
     "only-active": "Solamente activos",
     "only-charged": "Sólo pagados",
@@ -1076,7 +1076,7 @@
     "origin": "Origen",
     "origin-warehouse": "Almacén de orígen",
     "original": "Original",
-    "original-file": "Fichero original",
+    "original-file": "Původní soubor",
     "other-data": "Otros datos",
     "others-filters": "Otros filtros",
     "out-of-stock": "Sin stock",
@@ -1116,7 +1116,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% daň",
     "pct-vat": "% Impuesto",
     "pending": "Pendiente",
     "pending-invoices-button": "Fact. Ptes:",
@@ -1128,12 +1128,12 @@
     "percentage-surcharge": "% R.E.",
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
-    "personalized": "Personalizado",
+    "personalized": "Personalizované",
     "phase": "Fase",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
     "phones": "Teléfonos",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "Ve zkonfiguraci PHP je vyžadováno rozšíření %extension%",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "physical-stock": "Stock físico",
@@ -1144,7 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% ha sido eliminado correctamente.",
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Tento server nepovoluje nahrávání souborů větších než %size% MB. Zvětšete prosím maximální velikost nahrávání souborů v PHP nebo zkopírujte soubor do složky Pluginy.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1152,7 +1152,7 @@
     "plugin-needed": "Se requiere el plugin %pluginName%.",
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
     "plugin-not-compatible": "El Plugin %pluginName% no es compatible con FacturaScripts %version%",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Řazení: %num%",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
     "plugin-unsupported-version": "El plugin %pluginName% es para FacturaScripts 2017 o anteriores, pero estás usando FacturaScripts %version%",
@@ -1160,7 +1160,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Puntos",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Body zájmu",
     "port": "Puerto",
     "position": "Cargo",
     "positive-balance": "Saldo positivo",
@@ -1173,14 +1173,14 @@
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Předchozí čtvrtletí",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Precio",
     "price-with-tax": "Precio + impuestos",
     "principal": "Principal",
     "print": "Imprimir",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Tisk bankovních údajů",
     "print-data-records": "Imprimir todos los registros",
     "print-export-options": "Opciones de imprimir y exportar",
     "print-list-of-records": "Imprimir lista de registros",
@@ -1200,7 +1200,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Pérdidas y Ganancias",
     "profit-and-loss-balance": "Balance de Pérdidas y Ganancias",
-    "profits": "Beneficios",
+    "profits": "Zisky",
     "project": "Proyecto",
     "projects": "Proyectos",
     "provider-reference": "Referéncia de proveedor",
@@ -1227,8 +1227,8 @@
     "rates": "Tarifas",
     "re": "RE",
     "re-open": "Reabrir",
-    "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "react": "Reagovat",
+    "read-message-by": "Čteno uživatelem %nick% dne %date%",
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
     "rebuild": "Reconstruir",
