--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -201,11 +201,11 @@
     "cant-delete-default-tax": "L'imposition par défaut ne peut être supprimée",
     "cant-delete-default-warehouse": "L'entrepôt par défaut ne peut être supprimé",
     "cant-delete-last-user": "Le dernier utilisateur ne peut être supprimé",
-    "cant-delete-variant-with-documents": "Impossible de supprimer le produit ou la variante %reference% car il a déjà été acheté ou vendu. Mais vous pouvez le bloquer si vous le souhaitez.",
+    "cant-delete-variant-with-documents": "Vous ne pouvez pas supprimer le produit ou la variante %reference% car il a déjà été acheté ou vendu. Mais vous pouvez le bloquer si vous le souhaitez.",
     "cant-load-controller": "Impossible de charger le contrôleur '%controllerName%'.",
     "cant-modify-reference": "Impossible d'éditer la référence.",
     "cant-remove-accounting-entry": "L'entrée comptable ne peut être supprimée",
-    "cant-remove-invoice-refund": "Impossible de supprimer une facture qui a déjà un remboursement",
+    "cant-remove-invoice-refund": "Il n'est pas possible de supprimer une facture qui a déjà été corrigée (retournée).",
     "cant-remove-receipt": "Le reçu ne peut être retiré",
     "cant-update-audit-log": "Un enregistrement d'audit ne peut être modifié",
     "card": "Carte",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Date indiquée dans l'en-tête de l'entrée comptable",
     "day": "jour",
     "days": "Jours",
-    "days-log-retention": "Nombre de jours de conservation des journaux",
+    "days-log-retention": "Nombre de jours de conservation du journal",
     "days-until-expiration": "Jours avant l'échéance",
     "db-host": "Base de données du serveur",
     "db-name": "Nom de la base de données",
@@ -413,7 +413,7 @@
     "delete-closing": "Éliminer les entrées de clôture de compte",
     "delete-data": "Suprimmer les données",
     "delete-file": "Supprimer le fichier",
-    "delete-logs": "Supprimer les journaux",
+    "delete-logs": "Supprimer l'historique",
     "delete-opening": "Supprimer l'entrée d'ouverture de compte",
     "delete-record": "Supprimer l'enregistrement",
     "Deleted": "Supprimé",
@@ -474,7 +474,7 @@
     "document-type": "Type de document",
     "document-type-valid-length": "Type de document incorrect Doit être compris entre 1 et 20 caractères.",
     "document-wildcard-info": "Document indiqué dans l'en-tête de l'entrée comptable",
-    "document-without-total": "Document %document% sans totaux ou avec un total de 0.",
+    "document-without-total": "Document %document% sans total ou avec un total à 0.",
     "documentation": "Documentation",
     "documents": "Documentos",
     "documents-generated": "Documents générés",
@@ -574,7 +574,7 @@
     "exceptions": "Exceptions",
     "excess": "En excès",
     "exclude-invalid": "Exclure les invalides",
-    "exclude-valid": "Excluir válidos",
+    "exclude-valid": "Exclure valides",
     "exempt": "Exempter",
     "exercise": "Exercice",
     "exercise-date-out-range": "La date ne se trouve pas dans la période de l'exercice.",
@@ -622,7 +622,7 @@
     "finalize": "finaliser",
     "find-problems": "Trouver des problèmes",
     "finished-cron": "L'exécution des tâches programmées FacturaScripts est terminée. Temps nécessaire : %timeNeeded%",
-    "first-quarter": "Primer trimestre",
+    "first-quarter": "Premier trimestre",
     "first-steps": "Premiers pas",
     "first-trimester": "Premier trimestre",
     "fiscal-data": "Données fiscales",
@@ -638,7 +638,7 @@
     "footer-text": "Texte du pied",
     "for-admins": "Pour les administrateurs",
     "for-all": "Pour tout le monde",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Pour tous les exercices",
     "for-purchase": "Pour l'achat",
     "for-sale": "À vendre",
     "foresee": "Prévoir",
@@ -646,7 +646,7 @@
     "formula-cost-price": "Prix coûtant + x% + y",
     "formula-sale-price": "Prix - x% - y",
     "formula-to-apply": "Formule à appliquer",
-    "fourth-quarter": "4º trimestre",
+    "fourth-quarter": "4ème trimestre",
     "fourth-trimester": "Quatrième trimestre",
     "free": "libre",
     "friday": "Vendredi",
@@ -656,12 +656,12 @@
     "from-subaccount": "À partir du sous-compte",
     "full-access": "Accès complet",
     "full-path": "Chemin complet",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Lacune trouvée pour le numéro %numero%, le jour %fecha%, %codserie% et la société %idempresa%.",
     "general": "Général",
     "general-concepts": "Concepts généraux",
     "general-data": "Données générales",
     "generate": "Générer",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Générer des écritures de journal",
     "generate-accounting-entry": "Générer une entrée comptable",
     "generate-doc-type": "Générer un type de document",
     "generate-invoice": "Générer une facture",
@@ -704,15 +704,15 @@
     "group-by-year": "Grouper par année",
     "group-by-year-unixtime": "Grouper par année (temps UNIX)",
     "group-more-docs-p": "Si vous le souhaitez, vous pouvez grouper avec d'autres documents de ce client \/ fournisseur",
-    "group-name": "Nombre del Grupo",
+    "group-name": "Nom du groupe",
     "group-or-split": "Grouper ou séparer",
     "group-or-split-p": "Cet assistant vous permet de générer un nouveau document à partir des lignes provenant d'autres documents. Sélectionnez les quantités que vous désirez utiliser, la date du nouveau document et cliquez sur le bouton Générer.",
     "grouping-type": "Groupe",
     "groups": "Groupes",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Il comporte des pièces jointes",
     "has-parent": "Possède un parent",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "En-tête",
     "heading-account-group-id": "En tête du groupe d'identification de compte",
     "heading-account-id-root": "En-tête de compte",
     "health": "Santé",
@@ -723,7 +723,7 @@
     "help-server-accepts-filesize": "Ce serveur prend en charge une taille maximale de %size% MB.",
     "hide": "Masquer",
     "high": "Haut",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Prix plus élevé",
     "hint-create-accounting-entry": "Créer l'entrée comptable pour la régularisation d'imposition de la période",
     "hint-vat-register": "Voir\/Modifier l'enregistrement des taxes",
     "history": "Historique",
@@ -741,14 +741,14 @@
     "idem-wildcard-info": "Copier la valeur de la ligne précédente",
     "image": "Image",
     "images": "Imágenes",
-    "images-added-correctly": "%count% imágenes añadidas correctamente",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "images-added-correctly": "%count% images ajoutées avec succès",
+    "impacted-tax-re-subaccount": "Sous-compte de la surtaxe",
     "impacted-tax-subaccount": "Sous-compte fiscal impacté",
     "import": "Importer",
     "import-accounting-plan": "Import plan comptable",
     "import-accounting-plan-p": "Laissez ce champ vide pour utiliser le plan comptable par défaut, ou sélectionnez le fichier de votre plan comptable personnalisé.",
-    "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "import-file": "Importer un fichier",
+    "in-progress": "En cours",
     "in-stock": "En stock",
     "inactive": "Inactif",
     "income-and-expenses": "Recettes et dépenses",
@@ -761,23 +761,23 @@
     "insert-update": "Ajouter ou modifier",
     "installed": "Installé",
     "installed-plugins": "Installé",
-    "installer": "Programme d'installation FacturaScripts 2018 (Alpha)",
+    "installer": "Installateur FacturaScripts 2018 (Alpha)",
     "installer-p": "Bienvenue à l'installateur de FacturaScripts. Remplissez les champs nécessaires pour se connecter à la base de données.",
     "installer-requirements": "Les extensions et fonctions suivantes sont nécessaires pour FacturaScripts:",
     "integrity-check": "Test d'intégrité",
     "integrity-check-help": "Il s'agit d'un test d'intégrité système, comme décrit",
     "international-identifier": "Identifiant international",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intra-communautaire",
     "invalid-alphanumeric-code": "Le code alphanumérique entré (%value%) est incorrect. (%column%) doit avoir entre %min% et %max% chiffres ou lettres, et ne pas comporter d'espaces, d'accents ou tout autre caractère.",
     "invalid-column-lenght": "%column% doit avoir entre %min% et %max% caractères.",
     "invalid-date": "Date %date% non valide.",
-    "invalid-date-there-are-invoices-after": "Date incorrecte. Il existe déjà des factures datées après %date%",
-    "invalid-date-there-are-invoices-before": "Date incorrecte. La date %date% est plus récente que celle de la facture suivante.",
+    "invalid-date-there-are-invoices-after": "Date incorrecte. Il y a déjà des factures datées après %date%.",
+    "invalid-date-there-are-invoices-before": "Date incorrecte. La date %date% est postérieure à la date de la prochaine facture.",
     "invalid-iban": "IBAN incorrect : %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Code ISO invalide ''%iso-code%''.",
     "invalid-number": "Nombre incorrect : %number%",
     "invalid-request": "Requête incorrecte",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Permission non valide : %permission%. Les autorisations disponibles sont access, delete, export, import, update et only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "facture",
     "invoice-email-subject": "Votre facture %code%",
@@ -808,21 +808,21 @@
     "items-removed-correctly": "%num% éléments supprimés correctement",
     "ivarep-subaccount-not-found": "Sous-compte de TVA sortante non trouvé",
     "ivasop-account-not-found": "sous-compte de TVA déductible non trouvé",
-    "january": "Enero",
+    "january": "Janvier",
     "job-name": "Nom du travail",
     "journal": "Journal",
     "journal-closing": "Journal pour la clôture",
     "journal-opening": "Journal pour l'ouverture",
     "journals": "Journaux",
-    "july": "Julio",
-    "june": "Junio",
+    "july": "Juillet",
+    "june": "Juin",
     "justified": "Justifié",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Clé Google Maps",
     "keys": "clés",
     "lang-code": "Code de langue",
     "language": "Langue",
     "languages-ca_ES": "Catalan",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Tchèque",
     "languages-de_DE": "Allemand",
     "languages-en_EN": "Anglais",
     "languages-es_AR": "Espagnol (Argentine)",
@@ -841,8 +841,8 @@
     "languages-fr_FR": "Français (France)",
     "languages-gl_ES": "Galicien",
     "languages-it_IT": "Italien",
-    "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pl_PL": "Polonais",
+    "languages-pt_BR": "Portugais (Brésil)",
     "languages-pt_PT": "Portuguais",
     "languages-va_ES": "Valencien",
     "last-activity": "Dernière Activité",
@@ -850,14 +850,14 @@
     "last-block": "Dernier bloc",
     "last-ip": "Dernière adresse IP",
     "last-month": "Le mois dernier",
-    "last-price-estimation": "Última precio de presupuesto",
-    "last-price-sale": "Último precio de venta",
+    "last-price-estimation": "Dernière estimation de prix",
+    "last-price-sale": "Dernier prix de vente",
     "last-purchase-price": "Dernier prix d'achat",
     "last-quarter": "Dernier quart",
     "last-semester": "Dernier semestre",
     "last-trimester": "Dernier trimestre",
     "last-update": "Dernière mise à jour",
-    "last-user": "Último usuario",
+    "last-user": "Dernier utilisateur",
     "last-week": "Semaine dernière",
     "last-year": "Année dernière",
     "latitude": "Latitude",
@@ -865,8 +865,8 @@
     "ledger": "Quotidien",
     "left": "Gauche",
     "level": "Niveau",
-    "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-benefit-sales": "Niveau pour voir les avantages",
+    "level-cost-sales": "Niveau pour voir les coûts",
     "level1": "Niveau 1",
     "level2": "Niveau 2",
     "level3": "Niveau 3",
@@ -905,35 +905,35 @@
     "long": "Longue",
     "longitude": "Longitude",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Rechercher les écarts",
     "lot": "Lot",
     "low-security": "Faible sécurité",
     "machine": "Machine",
     "machines": "Machines",
     "macro-account-note-info": "Mots-clés à remplacer par des valeurs",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Erreur de connexion au serveur de messagerie",
     "mail-test-error": "Le test de l'e-mail a échoué",
     "mail-test-ok": "Test de l'email effectué avec succès",
     "mailer": "Contrôleur de courrier",
     "main-address": "Adresse principale",
     "manage": "Gérer",
-    "manage-installation": "Administrar",
+    "manage-installation": "Gérer",
     "manual": "Manuel",
     "manufacturer": "Fabricant",
     "manufacturer-code": "Code du fabricant",
     "manufacturers": "Fabricants",
-    "march": "Marzo",
+    "march": "Mars",
     "margin": "Marge",
     "margin-top": "Haut de la marge",
     "mark-as-homepage": "Marquer comme page d'accueil",
     "marked-as-homepage": "Marqué comme page d'accueil. Cliquez à nouveau pour annuler.",
     "max-input-vars-warning": "Avec la configuration PHP actuelle (max_input_vars), vous ne pourrez pas travailler avec des documents contenant plus de %numlines% lignes.",
     "max-risk": "Risque max.",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-with-cifnif": "Montant maximum avec CIF\/NIF",
+    "maximum-amount-without-cifnif": "Montant maximum sans CIF\/NIF",
     "maximum-stock": "Stock maximum",
-    "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "may": "Mai",
+    "mega-search": "MegaRecherche",
     "memcache": "Memcache",
     "memcache-clear": "Memcache effacé.",
     "memcache-delete-key-item": "Élément supprimé '%item%' de Memcache.",
@@ -948,8 +948,8 @@
     "meta-description": "FacturaScripts est un logiciel de facturation et de comptabilité pour pymes. C'est un logiciel libre sous licence GNU \/ LGPL.",
     "method-payment": "Moyen de paiement",
     "mime-type": "Type MIME",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-with-cifnif": "Montant minimum avec CIF\/NIF",
+    "minimum-amount-without-cifnif": "Montant minimum sans CIF\/NIF",
     "minimum-stock": "Stock minimum",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "Entrée comptable non concordante",
@@ -959,26 +959,26 @@
     "missing-file": "Fichier manquant",
     "missing-file-help": "Ce fichier semble manquer à votre installation. Même si vous n'en avez pas l'utilité, <em>vous ne devez pas le supprimer<\/em>.",
     "mobile": "Mobile",
-    "model": "Modelo",
+    "model": "Modèle",
     "model-not-found": "Modèle non trouvé : %model%",
     "monday": "Lundi",
     "month": "Mes",
-    "month-1": "Enero",
-    "month-10": "Octubre",
-    "month-11": "Noeviembre",
-    "month-12": "Diciembre",
-    "month-2": "Febrero",
-    "month-3": "Marzo",
-    "month-4": "Abril",
-    "month-5": "Mayo",
-    "month-6": "Junio",
-    "month-7": "Julio",
+    "month-1": "Janvier",
+    "month-10": "Octobre",
+    "month-11": "Novembre",
+    "month-12": "Décembre",
+    "month-2": "Février",
+    "month-3": "Mars",
+    "month-4": "Avril",
+    "month-5": "Mai",
+    "month-6": "Juin",
+    "month-7": "Juillet",
     "month-8": "Agosto",
     "month-9": "Septiembre",
     "month-name": "Nom du mois",
     "month-wildcard-info": "Mois en cours (de la date actuelle)",
     "monthly": "Mensuel",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Paiement mensuel",
     "months": "Mois",
     "more": "Plus",
     "more-fields": "Plus de champs",
