--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -337,15 +337,15 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "cron-job",
-    "crons": "Crons",
+    "crons": "Cron",
     "currency": "Moneta",
     "currency-position": "Currency position",
     "current-quarter": "Trimestre attuale",
-    "current-risk": "current-risk",
+    "current-risk": "rischio attuale",
     "customer": "Cliente",
     "customer-account-not-found": "Account cliente non trovato",
     "customer-banking-accounts": "Conti bancari",
-    "customer-code": "customer-code",
+    "customer-code": "codice cliente",
     "customer-commission-info": "customer-commission-info",
     "customer-delivery-note": "Customer delivery note",
     "customer-delivery-notes": "Customer delivery notes",
@@ -359,23 +359,23 @@
     "customer-not-found": "Cliente non trovato",
     "customer-order": "Customer order",
     "customer-orders": "Ordini del cliente",
-    "customer-payment-concept": "customer-payment-concept",
-    "customer-reached-maximum-risk": "customer-reached-maximum-risk",
-    "customer-subaccount-p": "customer-subaccount-p",
+    "customer-payment-concept": "concetto di pagamento del cliente",
+    "customer-reached-maximum-risk": "Il cliente ha raggiunto il massimo rischio",
+    "customer-subaccount-p": "sottocliente-p",
     "customers": "Clienti",
-    "customize": "customize",
+    "customize": "personalizzare",
     "daily": "Daily",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li1": "Se si cancella o disinstalla FacturaScripts, si perdono i dati.",
+    "dasboard-backup-li2": "Se si cancella o disinstalla XAMPP, si perdono i dati.",
+    "dasboard-backup-li3": "Se si perde, formatta o distrugge il PC, si perdono i dati.",
     "dashboard": "Cruscotto",
-    "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
-    "dashboard-for": "dashboard-for",
+    "dashboard-backup": "Backup",
+    "dashboard-backup-p": "Vi ricordiamo che avete installato FacturaScripts sul vostro PC, quindi i dati (fatture, clienti, ecc...) vengono memorizzati sul vostro PC e solo sul vostro PC. Fate regolarmente il backup e conservate quei backup lontano dal PC.",
+    "dashboard-for": "Dashboard per",
     "data-source": "Origin data",
     "database": "Database",
-    "database-error": "Error al conectar a la base de datos",
-    "database-name-must-be-lowercase": "database-name-must-be-lowercase",
+    "database-error": "Errore di connessione al database",
+    "database-name-must-be-lowercase": "il-nome-del-database-deve-essere-maiuscolo",
     "date": "data",
     "date-in": "Data in",
     "date-of-suspension": "Date of suspension",
@@ -384,10 +384,10 @@
     "date-out-of-exercise-range": "Data dall'intervallo di eccitazione 0",
     "date-wildcard-info": "Current date (computer date)",
     "dateentry-wildcard-info": "dateentry-wildcard-info",
-    "day": "day",
+    "day": "giorno",
     "days": "days",
-    "days-log-retention": "Nº días retención logs",
-    "days-until-expiration": "days-until-expiration",
+    "days-log-retention": "Giorni di conservazione dei log",
+    "days-until-expiration": "giorni-fino-scadenza",
     "db-host": "Database del server",
     "db-name": "Nome del database",
     "db-password": "La password del database.",
@@ -397,34 +397,34 @@
     "db-user": "Database utenti",
     "debit": "Debit",
     "debug-mode": "Debug mode",
-    "december": "Diciembre",
+    "december": "Dicembre",
     "decimal-separator": "Decimale",
     "decimals": "Decimali",
     "default": "Predefinito",
     "default-customer": "default-customer",
-    "default-retention": "default-retention",
-    "default-role": "Default role",
-    "default-tax": "default-tax",
+    "default-retention": "ritenzione-predefinita",
+    "default-role": "Ruolo predefinito",
+    "default-tax": "imposta-predefinita",
     "default-to-company-email": "Per impostazione predefinita, la email aziendale",
     "default-to-user-email": "Per impostazione predefinita, l'e-mail dell'utente",
     "default-warehouse": "default-warehouse",
     "delete": "rimuovere",
     "delete-all": "delete-all",
-    "delete-closing": "delete-closing",
+    "delete-closing": "elimina-la-chiusura",
     "delete-data": "Delete data",
-    "delete-file": "delete-file",
+    "delete-file": "elimina-file",
     "delete-logs": "Cancella dati di navigazione",
-    "delete-opening": "delete-opening",
+    "delete-opening": "elimina-l'apertura",
     "delete-record": "Rimuovi record",
     "Deleted": "Rimosso",
-    "deleted-model": "Eliminado %model% (%key%) %desc%",
+    "deleted-model": "Eliminato %model% (%key%) %desc%",
     "delivery-note": "lista dei passeggeri",
-    "delivery-note-email-subject": "delivery-note-email-subject",
-    "delivery-note-email-text": "delivery-note-email-text",
+    "delivery-note-email-subject": "oggetto-email-sul-foglio-di-consegna",
+    "delivery-note-email-text": "testo-email-sul-foglio-di-consegna",
     "delivery-notes": "scivola imballaggio",
     "delivery-notes-button": "Penna. del. gli appunti:",
-    "department": "department",
-    "departments": "departments",
+    "department": "dipartimento",
+    "departments": "dipartimenti",
     "desc": "Descrizione",
     "desc-alfa-code-2": "Identificazione ufficiale per nome di paesi e altre unità amministrative",
     "desc-alfa-code-3": "Identificazione ufficiale per nome di paesi e altre unità amministrative",
@@ -446,10 +446,10 @@
     "description-4ba": "Descrizione 4ba",
     "description2": "description2",
     "description3": "description3",
-    "design": "Diseño",
+    "design": "Design",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
-    "details": "Detalles",
+    "details": "Dettagli",
     "difference": "difference",
     "different-passwords": "Le password non corrispondono %1$s",
     "different-than": "Diverso da",
