--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -223,7 +223,7 @@
     "charts": "gráficos",
     "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '0'",
-    "check-vies": "Comprobar VIES",
+    "check-vies": "Verificar VIES",
     "checked": "Checado",
     "children": "Criança",
     "children-accounts": "Children Accounts",
@@ -235,36 +235,36 @@
     "choose-serie": "Seleciona a série",
     "choose-source": "Choose source",
     "cifnif": "TIC \/ TIN",
-    "cities": "cities",
+    "cities": "cidades",
     "city": "Cidade",
-    "click-link-to-add": "click-link-to-add",
+    "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
     "clone": "Clone",
     "clone-account-entry": "Duplicate the accounting entry",
     "close": "Fechar",
     "close-box": "Fechar caixa",
-    "close-exercise": "close-exercise",
+    "close-exercise": "cerrar-ejercicio",
     "closed": "Closed",
     "closed-exercise": "O exercício 0 está fechado.",
     "closed-exercise-cant-change-date": "O exercício 0 está fechado. Você não pode mudar a data.",
-    "closing-accounting-completed": "closing-accounting-completed",
-    "closing-closing-concept": "closing-closing-concept",
-    "closing-opening-concept": "closing-opening-concept",
+    "closing-accounting-completed": "cierre-contable-completado",
+    "closing-closing-concept": "concepto-de-cierre",
+    "closing-opening-concept": "concepto-de-apertura",
     "closing-operation": "Cierre",
-    "closing-regularization-concept": "closing-regularization-concept",
+    "closing-regularization-concept": "concepto-de-regularización",
     "codbarras": "Código de barras",
     "code": "Código",
     "codiso": "Código ISO",
     "color": "cor",
-    "color-danger": "Color peligro",
-    "color-dark": "Color oscuridad",
-    "color-info": "Color info",
-    "color-light": "Color luz",
-    "color-primary": "Color primario",
-    "color-secondary": "Color secundario",
-    "color-success": "Color éxito",
-    "color-warning": "Color advertencia",
-    "colors": "colors",
-    "column": "Columna",
+    "color-danger": "Cor perigo",
+    "color-dark": "Cor escura",
+    "color-info": "Cor info",
+    "color-light": "Cor luz",
+    "color-primary": "Cor primária",
+    "color-secondary": "Cor secundária",
+    "color-success": "Cor sucesso",
+    "color-warning": "Cor de aviso",
+    "colors": "cores",
+    "column": "Coluna",
     "columns": "Columns",
     "combination-code": "Combination code",
     "combinations": "Combinações",
@@ -280,7 +280,7 @@
     "company-commission-info": "company-commission-info",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "compared",
     "compatible": "Compatible",
