--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -211,16 +211,16 @@
     "card": "Cartão",
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
-    "cash": "Efectivo",
+    "cash": "Dinheiro",
     "categories": "Categorías",
-    "category": "Categoría",
+    "category": "Categoria",
     "cc": "CC",
     "center": "Center",
     "change": "mudança",
     "channel": "channel",
-    "charge-date": "Fecha cargo",
+    "charge-date": "Data de cobrança",
     "chart": "Chart",
-    "charts": "charts",
+    "charts": "gráficos",
     "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '0'",
     "check-vies": "Comprobar VIES",
@@ -235,7 +235,7 @@
     "choose-serie": "Seleciona a série",
     "choose-source": "Choose source",
     "cifnif": "TIC \/ TIN",
-    "cities": "cities",
+    "cities": "cidades",
     "city": "Cidade",
     "click-link-to-add": "click-link-to-add",
     "clone": "Clone",
