--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -18,7 +18,7 @@
     "account-data-missing": "Kontuan datuak falta dira",
     "account-dot-code": "Puntua zeroak automatikoki osatzeko. Adibidez: 11.1 = 1100000001",
     "account-length": "Azpikontuaren luzera",
-    "account-length-error": "Azpikontuaren luzera okerra. %code% azpikontuaren luzera ekitaldian zehaztutakoa izan behar du.",
+    "account-length-error": "Kontuaren luzera okerra. %code% kontuaren luzera ekitaldian zehaztu behar duzu.",
     "account-missing-in-balance": "%codcuenta% kontuak saldoa du baina ez dago saldoetan sartuta. Kontuan hartu hau sartzea oreka desorekatuta badago.",
     "account-parent-error": "'guraso' kontua ez da zuzena edo ez da ekitaldikoa",
     "accounting": "Kontabilitatea",
@@ -817,12 +817,12 @@
     "july": "Uztaila",
     "june": "Ekaina",
     "justified": "Justifikatuta",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Google Mapsaren gako",
     "keys": "Gakoak",
     "lang-code": "Hizkuntza kodea",
     "language": "Hizkuntza",
     "languages-ca_ES": "Katalan",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Txekiera",
     "languages-de_DE": "Aleman",
     "languages-en_EN": "Ingeles",
     "languages-es_AR": "Gaztelania (Argentina)",
@@ -841,8 +841,8 @@
     "languages-fr_FR": "Frantsez",
     "languages-gl_ES": "Galiziera",
     "languages-it_IT": "Italiera",
-    "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pl_PL": "Poloniera",
+    "languages-pt_BR": "Portugesa (Brasil)",
     "languages-pt_PT": "Portuges",
     "languages-va_ES": "Valentziera",
     "last-activity": "Azken konexioa",
@@ -861,12 +861,12 @@
     "last-week": "Aurreko astean",
     "last-year": "Iaz",
     "latitude": "Latitudea",
-    "latitude-abb": "Lat",
+    "latitude-abb": "Gor",
     "ledger": "Egunero",
     "left": "Ezkerra",
     "level": "Maila",
-    "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-benefit-sales": "Onurak ikusteko maila",
+    "level-cost-sales": "Kostuak ikusteko maila",
     "level1": "1. maila",
     "level2": "2. maila",
     "level3": "3. maila",
@@ -890,7 +890,7 @@
     "locked": "Blokeatuta",
     "log": "Log",
     "login": "Saioa hasi",
-    "login-cookie-fail": "Saioaren cookie-a baliogabea da",
+    "login-cookie-fail": "Saioaren cookiea baliogabea da",
     "login-image": "Saioa hasteko irudia",
     "login-ok": "Saioa ondo hasi da (cookie). Erabiltzailea: '%nick%'",
     "login-password-fail": "Erabiltzailea edo pasahitza ez dira zuzenak",
@@ -904,7 +904,7 @@
     "logs": "Log-ak",
     "long": "Luzea",
     "longitude": "Luzera",
-    "longitude-abb": "Long",
+    "longitude-abb": "Lon",
     "look-for-gaps": "Hutsuneak bilatu",
     "lot": "Lotea",
     "low-security": "Segurtasun gutxi",
@@ -959,26 +959,26 @@
     "missing-file": "Fitxategia falta da",
     "missing-file-help": "Badirudi fitxategi hau ez dagoela zure instalazioan.  Beharbada ez duzu erabiliko, baina <em>ezin duzu ezabatu<\/em>.",
     "mobile": "Mugikorra",
-    "model": "Modelo",
+    "model": "Modeloa",
     "model-not-found": "Modeloa ez da aurkitu: %model%",
     "monday": "Astelehena",
     "month": "Hilabetea",
-    "month-1": "Enero",
-    "month-10": "Octubre",
-    "month-11": "Noeviembre",
-    "month-12": "Diciembre",
-    "month-2": "Febrero",
-    "month-3": "Marzo",
-    "month-4": "Abril",
-    "month-5": "Mayo",
-    "month-6": "Junio",
-    "month-7": "Julio",
-    "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-1": "Urtarrila",
+    "month-10": "Urria",
+    "month-11": "Azaroa",
+    "month-12": "Abendua",
+    "month-2": "Otsaila",
+    "month-3": "Martxoa",
+    "month-4": "Apirila",
+    "month-5": "Maiatza",
+    "month-6": "Ekaina",
+    "month-7": "Uztaila",
+    "month-8": "Abuztua",
+    "month-9": "Iraila",
     "month-name": "Hilabetearen izena",
     "month-wildcard-info": "Oraingo hilabetea (gaurko datakoa)",
     "monthly": "Hilero",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Hilabeteko ordaina",
     "months": "Hilabeteak",
     "more": "Gehiago",
     "more-fields": "Eremu gehiago",
@@ -1016,7 +1016,7 @@
     "no-invoice": "Fakturarik gabe",
     "no-outstanding-amount": "Ez dago zenbatekorik zain",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
-    "no-reference": "Sin referencia",
+    "no-reference": "Erreferentziarik gabe",
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
     "non-editable-accounting-entry": "Idazpena ezin da editatu",
@@ -1028,10 +1028,10 @@
     "not-allowed-modify": "Ez duzu aldatzeko baimenik",
     "not-enough-stock": "%reference% artikuluaren stock nahikoa ez dago",
     "not-passed-integrity-check": "Fitxategi batzuk ez dute gainditu integritate egiaztapena ...  <br\/>Hemen <a class='alert-link' target='_blank' href='IntegritySystemCheck'> begiratu xehetasunak<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Ezin da edukia biltegi egin",
     "not-valid-email": "%email% eposta baliogabea",
     "not-valid-fiscal-number": "%type% %number% baliogabea",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "Irudia ez da baliozkoa",
     "not-valid-percentage-retention": "Ehuneko ez zuzena. 0.00 baino handiagoa izan behar da",
     "note": "Oharra",
     "notes": "Oharrak",
@@ -1039,16 +1039,16 @@
     "notices": "Oharrak",
     "notification": "Jakinarazpena",
     "notifications": "Jakinarazpenak",
-    "november": "Noviembre",
+    "november": "Azaroa",
     "number": "Zenbakia",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Eranskin kopurua",
     "number-length": "Zenbakiaren luzera",
     "number-recipients": "Jasotzaile Zkia.",
     "number2": "2. zenbakia",
     "numeric-formats": "Zenbaki formatuak",
     "numsupplier": "Hornitzaile zenbakia",
     "observations": "Oharrak",
-    "october": "Octubre",
+    "october": "Urria",
     "offsetting-account": "Kontrakontua",
     "only-active": "Aktiboak bakarrik",
     "only-charged": "Ordaindutakoak bakarrik",
@@ -1076,7 +1076,7 @@
     "origin": "Jatorria",
     "origin-warehouse": "Jatorri biltegia",
     "original": "Originala",
-    "original-file": "Fichero original",
+    "original-file": "Fitxategi originala",
     "other-data": "Beste datu batzuk",
     "others-filters": "Beste iragazkiak",
     "out-of-stock": "Stock gabe",
@@ -1116,7 +1116,7 @@
     "pct": "%",
     "pct-irpf": "PFEZ %",
     "pct-surcharge": "Gainkargu %",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% zergak",
     "pct-vat": "Zerga %",
     "pending": "Pendiente",
     "pending-invoices-button": "Zain dauden Fakturak:",
@@ -1133,7 +1133,7 @@
     "phone": "Telefonoa",
     "phone2": "2. telefonoa",
     "phones": "Telefonoak",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "PHP-ren konfigurazioan %extension% luzapena behar da",
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
     "physical-stock": "Stock fisikoa",
@@ -1144,7 +1144,7 @@
     "plugin-deleted": "%pluginName% plugina ondo kendu da.",
     "plugin-disabled": "%pluginName% plugina ondo kendu da.",
     "plugin-enabled": "%pluginName% plugina ondo gaitu da.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Zerbitzari honek ez du fitxategiak %size% MB baino handiagoa igotzea baimentzen. Mesedez, igotzeko gehitu fitxagiekaba Plugins karpetik kopiatu.",
     "plugin-installation-disabled": "Plugin instalaketa desaktibatuta dago zerbitzari honetan",
     "plugin-installed": "'%pluginName%' plugina instalatuta",
     "plugin-need-update": "%plugin% pluginak eguneraketa bat beharko du FacturaScripts-en bertsio berriarekin funtzionatzeko.",
@@ -1160,7 +1160,7 @@
     "plugins": "Pluginak",
     "plugins-p": "Pluginak funtzio berriak gehitzeko aukera ematen dute. Aktibatu behar dituzunak orain, edo nahi duzunean administratzailearen menutik.",
     "points": "Puntuak",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Interes puntuak",
     "port": "Ataka",
     "position": "Kargua",
     "positive-balance": "Saldo positiboa",
@@ -1173,7 +1173,7 @@
     "previous": "Aurrekoa",
     "previous-balance": "Aurreko balantzea",
     "previous-documents": "Aurretiko dokumentuak",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Aurreko hiruhilekoa",
     "previously-purchased-from-supplier": "Aurretik hornitzaileari erosia",
     "previously-sold-to-customer": "Aurretik bezeroari salduta",
     "price": "Prezioa",
