--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -474,25 +474,25 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "El tipo de document no és vàlit. Ha de tindre entre 1 i 20 caràcters.",
     "document-wildcard-info": "Document indicat en la capçalera de l'assentament contable",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Document %document% sense totals o amb el total a 0.",
     "documentation": "Documentació",
-    "documents": "Documentos",
+    "documents": "Documents",
     "documents-generated": "Documents generats",
     "domiciled": "Domiciliat",
     "done": "Fet",
-    "done-date": "Fecha finalización",
+    "done-date": "Data finalització",
     "dont-sell-above-pvp": "No vendre per damunt del PVP",
     "dont-sell-below-cost": "No vendre per baix del cost",
     "download": "Descarregar",
     "download-completed": "Descàrrega finalisada",
-    "download-error": "Error al descargar. Código %status% - %error%",
-    "download-xml": "Descargar XML",
+    "download-error": "Error en descarregar. Codi %status% - %error%",
+    "download-xml": "Descarregar XML",
     "downloads": "Descàrregues",
     "drag": "Arrastrar",
     "dto": "Desconte",
     "dto-2": "Dte. 2",
     "duplicate-record": "Registre duplicat",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Referència '%reference%' duplicada",
     "duplicated-request": "Petició duplicada",
     "duration": "Duració",
     "edit": "edit",
